# space-synth

./: .gitignore  CLAUDE.md  CMakeLists.txt  PHYSICS_ANALYSIS.md  PROGRESS-2026-03-01.md  RESEARCH.md  ROADMAP_PHASE5_6.md  SCALAR_ARCHITECTURE.md  SOUND ARCHITECT.html  TECHNICAL_REVIEW_GOD_MODE.md  TECHNICAL_SUMMARY_EXEC.md  TIMELINE.md  TIMELINE_DEFINITIVE.md  TIMELINE_STABILITY.md  imgui.ini  package_macos.sh
SpaceSynth.app/Contents/: Info.plist
SpaceSynth.app/Contents/MacOS/: SpaceSynth
docs/: synth_research.md
presets/: default.json
src/: main.cpp
src/audio/: audio_engine.h  audio_engine.mm  chorus.cpp  chorus.h  fft.cpp  fft.h  svf.h  synth.cpp  synth.h
src/core/: bessel.cpp  bessel.h  camera.h  emitter.h  envelope.cpp  envelope.h  logger.cpp  logger.h  lut.cpp  lut.h  midi_input.h  midi_input.mm  modes.cpp  modes.h  particles.cpp  particles.h  preset_manager.cpp  preset_manager.h  resource_helper.h
src/render/: blackhole.metal  particles.metal  postfx.metal  render.metal  renderer.h  renderer.mm  spatial_hash.metal
src/ui/: mod_menu.cpp  mod_menu.h  ui_theme.h  window.h  window.mm
